--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
 derive_more = "0.99"
-
+log = "0.4.0"
+env_logger = "0.8.4"
