--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono
 derive_more = "0.99"
 log = "0.4.0"
 env_logger = "0.8.4"
+diesel-derive-enum = { version = "1", features = ["postgres"] }
+diesel-citext = "0.3.0"
