--- a/diesel.toml
+++ b/diesel.toml
@@ -3,3 +3,7 @@
 
 [print_schema]
 file = "src/schema.rs"
+
+import_types = ["diesel::sql_types::*", "diesel_citext::sql_types::*", "crate::db::types::*"]
+
+patch_file = "src/schema.patch"
