--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "3"
 actix-web-httpauth = "0.5"
+actix-cors = "0.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
