--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ env_logger = "0.8.4"
 diesel-derive-enum = { version = "1", features = ["postgres"] }
 diesel-citext = "0.3.0"
 juniper = "0.15"
-
+bcrypt = "0.10.1"
